Cambio en el estilo del public

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>Bloqueado</h1>
+    <h2 style="color: gray;">Este servicio está hecho para ser consumido para un curso de React</h2>
 </body>
 </html>
